--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!--
-  Project by Zua 
-  https://github.com/thatziv/webhook
+<!--   
+    STEAL WITH CREDITS TO https://venom69tooop.github.io/web-webhook-sender/
 -->
 
 <!DOCTYPE html>
@@ -9,23 +8,23 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Discord Webhook Sender</title>
-  <meta name="author" content="Zua">
-  <meta name="description" content="Simple Discord Webhook Sender">
-  <meta name="keywords" content="discord,zua,webhook">
+  <meta name="author" content="Venom OP">
+  <meta name="description" content="Simple Web Based Discord Webhook Sender">
+  <meta name="keywords" content="discord,Venom OP,webhook">
   <meta name="title" content="Discord Webhook Sender">
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
   <body>
 
     <div id="header">
-      <h>Discord Webhook Sender</h>
+      <h>Discord Web Based Webhook Sender</h>
     </div>
     <div id="container">
       <div class="center-align">
-        <p>Webhook Link:</p><input type='text' id="link" placeholder="Type Webhook URL here ex. https://discordapp.com/api/webhooks/462759446225879041/CX-NNGFq5zjht82fQSJUTN2Or2DGq8UTwoIlhHgZ7lTJ6-wlHlRshIRuOC0nE6frfSwG">
-        <p>Bot Username:</p><input type="text" id="username" placeholder="Type the Username of the Webhook here * OPTIONAL" value="ZuaWebhookSender">
-        <p>Avatar URL:</p><input type="text" id="avatar" placeholder="Image URL">
-        <p>Content:</p><input type="text" id="content" placeholder="Type the Content of the Webhook here">
+        <p>Webhook Link:</p><input type='text' id="link" placeholder="Type Webhook URL here ex. https://discord.com/api/webhooks/820944985872138280/ASG91xTn-khbFyPGrTNFLaEm2CiWWNMhGUnISIzPbnraV-xGXPVK6mlb4FHedrcu5QVj">
+        <p>Bot Username:</p><input type="text" id="username" placeholder="Type the Username of the Webhook here * OPTIONAL" value="VenomWebhookSender">
+        <p>Avatar URL:</p><input type="text" id="avatar" placeholder="Image URL ex. https://cdn.discordapp.com/attachments/821258535597768734/824479136235126784/GLITCH_20200810113818.gif">
+        <p>Content:</p><input type="text" id="content" placeholder="Type the Message to be sent here ex. Hello this is a web based webhook sender">
         <br>
         <button id="btn">Send</button>
         <center>
@@ -36,7 +35,7 @@
   </div> 
   </div>
   <div id="footer">
-    Copyright &copy; <a href="http://github.com/thatziv/">Zua</a>
+    Copyright &copy; <a href="https://github.com/venom69tooop/">Venom OP</a>
   </div>
  <script src="jquery.js"></script>
   <script src="main.js"></script>
