--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="container">
       <div class="center-align">
         <p>Webhook Link:</p><input type='text' id="link" placeholder="Type Webhook URL here ex. https://discord.com/api/webhooks/820944985872138280/ASG91xTn-khbFyPGrTNFLaEm2CiWWNMhGUnISIzPbnraV-xGXPVK6mlb4FHedrcu5QVj">
-        <p>Bot Username:</p><input type="text" id="username" placeholder="Type the Username of the Webhook here * OPTIONAL" value="VenomWebhookSender">
+        <p>Username:</p><input type="text" id="username" placeholder="Type the Username of the Webhook here * OPTIONAL" value="VenomWebhookSender">
         <p>Avatar URL:</p><input type="text" id="avatar" placeholder="Image URL ex. https://cdn.discordapp.com/attachments/821258535597768734/824479136235126784/GLITCH_20200810113818.gif">
         <p>Content:</p><input type="text" id="content" placeholder="Type the Message to be sent here ex. Hello this is a web based webhook sender">
         <br>
